--- a/src/app/admin/add-events/add-events.component.html
+++ b/src/app/admin/add-events/add-events.component.html
@@ -82,7 +82,7 @@
             <div class="input_block name_organization">
                 <h4>Назва </h4>
                 <div class="input ">
-                    <input formControlName="nameOrganization" type="text" name="nameOrganization" class="form-control"
+                    <input formControlName="namen" type="text" name="nameOrganization" class="form-control"
                         placeholder="*Введіь назву події">
                 </div>
             </div>
@@ -92,16 +92,17 @@
                 <h4>Опис</h4>
                 <div class="input ">
                     <div class="input ">
-                        <editor apiKey="zbrfrvv9yk1ghizpiadd8qk7tmbf2ds9a5lwy3b6lzzpsvv8" [init]="{
-                                                plugins: '',
-                                                toolbar: 'undo redo | blocks fontfamily fontsize | bold italic underline strikethrough | link image media table | align lineheight | numlist bullist indent outdent | emoticons charmap | removeformat',
-                                              }"></editor>
+                        <editor apiKey="zbrfrvv9yk1ghizpiadd8qk7tmbf2ds9a5lwy3b6lzzpsvv8"
+                            [init]="{ plugins: 'lists link image table code help wordcount' }" [inline]="false"
+                            formControlName="description"
+                            toolbar="bold italic underline | formatpainter | aligncenter alignleft alignright alignjustify | selectall | ltr rtl | code | help">
+                        </editor>
                     </div>
                 </div>
             </div>
 
             <!-- Зображення -->
-            <div class="image_organization">
+            <div class="image">
                 <div class="progress_line">
                     <div class="progress">
                         <div class="progress-bar progress-bar-striped" role="progressbar"
@@ -109,26 +110,16 @@
                             aria-valuemax="100"></div>
                     </div>
                 </div>
-                <div class="image_block">
-                    <div class="image">
-                        <img *ngIf="imagen; else emptyImage" [src]="imagen" alt="">
-                    </div>
-                    <ng-template #emptyImage>
-                        <div class="placeholder"></div>
-                    </ng-template>
-
-                    <input #fileInput type="file" style="display: none;" (change)="uploadUserImage($event)"
-                        accept="image/*" />
-
+                <div class="image">
+                    <img *ngIf="imagen; else emptyImage" [src]="imagen" alt="">
                 </div>
+                <ng-template #emptyImage>
+                    <div class="placeholder"></div>
+                </ng-template>
 
-
+                <input #fileInput type="file" style="display: none;" (change)="uploadUserImage($event)"
+                    accept="image/*" />
             </div>
-
-
-
-
-
 
 
             <div class="button_block">
