--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -6,6 +6,7 @@ section {
 
   .navbar {
     width: 100%;
+    border-bottom: 0.8px solid var(--clr-2);
 
     .container-fluid {
       display: flex;
