--- a/src/app/admin/add-abut/add-abut.component.scss
+++ b/src/app/admin/add-abut/add-abut.component.scss
@@ -23,10 +23,25 @@ section {
       flex-direction: column;
       align-items: center;
     }
+
     .image {
-      width: 80%;
-      height: auto;
-      margin-top: 20px;
+      width: 100%;
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      .progress_line {
+        width: 100%;
+      }
+      .image {
+        width: 400px;
+        height: auto;
+        overflow: hidden;
+        img {
+          width: 100%;
+        }
+      }
     }
 
     .button_block {
