--- a/src/app/admin/add-events/add-events.component.scss
+++ b/src/app/admin/add-events/add-events.component.scss
@@ -85,16 +85,46 @@ section {
   }
 
   .add_event_block {
+    width: 80vw;
+
+    .form_category {
+      width: 100%;
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      .image {
+        width: 100%;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        .progress_line {
+          width: 100%;
+        }
+        .image {
+          width: 400px;
+          height: auto;
+          overflow: hidden;
+          img {
+            width: 100%;
+          }
+        }
+      }
+
+      .button_block {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        margin-top: 20px;
+      }
+    }
     &.active {
       display: none;
-    }
-    .button_block {
-      width: 100%;
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: space-between;
-      margin-top: 20px;
     }
   }
 }
