--- a/src/app/admin/add-fake/add-fake.component.scss
+++ b/src/app/admin/add-fake/add-fake.component.scss
@@ -111,8 +111,23 @@ section {
     }
 
     .image {
-      width: 80%;
-      margin-top: 20px;
+      width: 100%;
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      .progress_line {
+        width: 100%;
+      }
+      .image {
+        width: 400px;
+        height: auto;
+        overflow: hidden;
+        img {
+          width: 100%;
+        }
+      }
     }
 
     .batton_section {
