--- a/src/app/admin/add-partner/add-partner.component.html
+++ b/src/app/admin/add-partner/add-partner.component.html
@@ -2,13 +2,13 @@
 
     <h1>Додайте партнерів</h1>
 
-<div class="creat_button">
-    <p>Створити фейк</p>
-    <button (click)="partners_form = !partners_form; resetForm()" class="btn btn-outline-secondary" data-rel="address"
-        type="button">
-        {{ !partners_form ? "ДОДАТИ ФЕЙК" : "ВІДМІНИТИ" }}
-    </button>
-</div>
+    <div class="creat_button">
+        <p>Створити</p>
+        <button (click)="partners_form = !partners_form; resetForm()" class="btn btn-outline-secondary"
+            data-rel="address" type="button">
+            {{ !partners_form ? "ДОДАТИ" : "ВІДМІНИТИ" }}
+        </button>
+    </div>
 
     <!--таблиця феків-->
     <div class="table_block" [ngClass]="{ active: partners_form }">
@@ -35,11 +35,11 @@
                         <a (click)="editFake(partners)" type="button" title="Редагувати">
                             <img src="../../assets/icon/edit.png" alt="Редагувати">
                         </a>
-                        <a (click)="delFake(partners)" type="button" title="Видалити">
+                        <a (click)="delPartner(partners)" type="button" title="Видалити">
                             <img src="../../assets/icon/dell.png" alt="Видалити">
                         </a>
                     </td>
-    
+
                 </tr>
                 }
             </tbody>
@@ -50,28 +50,36 @@
 
     <div class="input_block" [ngClass]="{ active: !partners_form }">
         <form [formGroup]="partnersForm" (ngSubmit)="addPartner()" class="form_category">
-           
+
             <!--Назва партнера-->
             <div class="input_block name_organization">
                 <h4>Назва</h4>
                 <div class="input ">
                     <input formControlName="name" type="text" name="nameOrganization" class="form-control"
-                        placeholder="*Введіь назву організації">
+                        placeholder="*Введіь назву ">
                 </div>
             </div>
-           
-           
-            <!--Про проект-->
+
+            <!--Посилання-->
+            <div class="input_block nlink_organization">
+                <h4>Посилання</h4>
+                <div class="input ">
+                    <input formControlName="link" type="text" name="link" class="form-control"
+                        placeholder="*Введіь Посиланняї">
+                </div>
+            </div>
+
+
+            <!--Опис-->
             <div class="input_block description_organization">
                 <h4>Опис</h4>
                 <div class="input ">
                     <div class="input ">
-                        <editor 
-                        apiKey="zbrfrvv9yk1ghizpiadd8qk7tmbf2ds9a5lwy3b6lzzpsvv8" 
-                        [init]="{plugins: '', 
-                        toolbar: 'undo redo | blocks fontfamily fontsize | bold italic underline strikethrough | link image media table | align lineheight | numlist bullist indent outdent | emoticons charmap | removeformat',
-                         }">
-                         </editor>
+                        <editor apiKey="zbrfrvv9yk1ghizpiadd8qk7tmbf2ds9a5lwy3b6lzzpsvv8"
+                            [init]="{ plugins: 'lists link image table code help wordcount' }" [inline]="false"
+                            formControlName="description"
+                            toolbar="bold italic underline | formatpainter | aligncenter alignleft alignright alignjustify | selectall | ltr rtl | code | help">
+                        </editor>
                     </div>
                 </div>
             </div>
@@ -85,30 +93,20 @@
                             aria-valuemax="100"></div>
                     </div>
                 </div>
-                <div class="image_block">
-                    <div class="image">
-                        <img *ngIf="image; else emptyImage" [src]="image" alt="">
-                    </div>
-                    <ng-template #emptyImage>
-                        <div class="placeholder"></div>
-                    </ng-template>
 
-
-
-                    <input #fileInput type="file" style="display: none;" (change)="uploadUserImage($event)"
-                        accept="image/*" />
-
+                <div class="image">
+                    <img *ngIf="image; else emptyImage" [src]="image" alt="">
                 </div>
-
-
+                <ng-template #emptyImage>
+                    <div class="placeholder"></div>
+                </ng-template>
+                <input #fileInput type="file" style="display: none;" (change)="uploadUserImage($event)"
+                    accept="image/*" />
             </div>
 
             <div class="button_block">
                 <button class="overlay btn btn-outline-secondary" type="button" (click)="fileInput.click()">Змінити
                     зображення</button>
-
-
-
 
                 <div class="batton_section">
                     <button type="submit" class="btn btn-outline-secondary">
