--- a/src/app/admin/add-partner/add-partner.component.scss
+++ b/src/app/admin/add-partner/add-partner.component.scss
@@ -1,82 +1,110 @@
 section {
-    width: 100vw;
-    padding: 5px;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  width: 100vw;
+  padding: 5px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 
+  h1 {
+    font-size: 2em !important;
+  }
 
-    h1 {
-        font-size: 2em !important;
+  .table_block {
+    width: 90%;
+
+    &.active {
+      display: none;
     }
 
-    .table_block {
+    table {
+      width: 100%;
+      margin-top: 20px;
+
+      thead {
         width: 100%;
 
-        &.active {
-            display: none;
+        tr {
+          border-bottom: var(--clr-grey);
         }
+      }
 
-        table {
-            width: 100%;
-            margin-top: 20px;
+      tbody {
+        tr {
+          .image {
+            width: 80px;
+            height: 70px;
+            overflow: hidden;
 
-            thead {
-                width: 100%;
-
-                tr {
-                    border-bottom: var(--clr-grey);
-                }
-
+            img {
+              height: 100%;
             }
+          }
 
-            tbody {
-                tr {
-                    .image {
-                        width: 80px;
-                        height: 70px;
-                        overflow: hidden;
-
-                        img {
-                            height: 100%;
-                        }
-                    }
-
-                    .btn_tr {
-                        width: 45px;
-                        display: flex;
-                        flex-direction: column;
-                        border-bottom: none;
-
-                        a {
-                            padding: 5px;
-                            overflow: hidden;
-
-                            img {
-                                width: 20px;
-                                height: 20px;
-                            }
-                        }
-                    }
-                }
-            }
-        }
-
-
-    }
-
-    .input_block {
-        .form_category .button_block {
+          .btn_tr {
+            width: 45px;
             display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: space-between;
-            margin-top: 20px;
-        }
+            flex-direction: column;
+            border-bottom: none;
 
-        &.active {
-            display: none;
+            a {
+              padding: 5px;
+              overflow: hidden;
+
+              img {
+                width: 20px;
+                height: 20px;
+              }
+            }
+          }
         }
+      }
     }
+  }
+
+  .input_block {
+    width: 80vw;
+
+    .form_category {
+      width: 100%;
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      .image_organization {
+        width: 100%;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        .progress_line {
+          width: 100%;
+        }
+        .image {
+          width: 400px;
+          height: auto;
+          overflow: hidden;
+          img {
+            width: 100%;
+          }
+        }
+      }
+
+      .button_block {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        margin-top: 20px;
+      }
+    }
+
+    &.active {
+      display: none;
+    }
+  }
 }
