--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,11 @@
 <section>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
+
         <div class="container-fluid">
 
-            <a [routerLink]="''" class="navbar-brand">Break The Fake</a>
+            <a class="navbar-brand" [routerLink]="''">
+                <img src="../../../assets/image/logo-title.png" alt="Break The Fake">
+            </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
