--- a/src/app/admin/add-fake/add-fake.component.html
+++ b/src/app/admin/add-fake/add-fake.component.html
@@ -12,7 +12,7 @@
                 {{ !fake_form ? "ДОДАТИ ФЕЙК" : "ВІДМІНИТИ" }}
             </button>
         </div>
-        <!--Фільтр рецептів-->
+        <!--Фільтр по країнах]-->
         <div class="filter" [ngClass]="{ active: fake_form }">
             <p>Фітр по країнах</p>
             <div class="search">
