--- a/src/app/pages/about-project/about-project.component.html
+++ b/src/app/pages/about-project/about-project.component.html
@@ -8,16 +8,44 @@
         <div class="line"></div>
     </div>
 
-    <div class="description position-relative">
-        <img [src]="image" class="img-fluid" alt="Background Image">
-        <div class="content position-absolute top-50 start-50 translate-middle text-white" [innerHTML]="description">
-
+    <div class="description">
+        <div class="image">
+            <img [src]="image" class="img-fluid" alt="Background Image">
         </div>
+        <div class="content" [innerHTML]="description"></div>
     </div>
 
 
 
+    <footer>
+        <div class="footer_links">
+            <ul>
+                <li class="nav-item">
+                    <a [routerLink]="['/about-project']" class="nav-link">About project</a>
+                </li>
+                <li class="nav-item">
+                    <a [routerLink]="['/partners']" class="nav-link">Partners</a>
+                </li>
+                <li class="nav-item">
+                    <a [routerLink]="['/events']" class="nav-link">Events</a>
+                </li>
 
-    <app-footer></app-footer>
+            </ul>
+            <div class="contact">
+                <a href="mailto:brakethefakes&#64;gmail.com">brakethefakes&#64;gmail.com</a>
+                <a class="facebook" href="https://www.facebook.com/caukraine" target="_blank" rel="noopener noreferrer">
+                    <img src="../../../assets/icon/facebook.png" alt="">
+                </a>
+                <a class="facebook" href="https://www.instagram.com/caukraine2022/" target="_blank"
+                    rel="noopener noreferrer">
+                    <img src="../../../assets/icon/instagram.png" alt="">
+                </a>
+            </div>
+        </div>
+        <div class="creat">
+            <p>© 2024 All Rights Reserved.</p>
+        </div>
+    </footer>
+
 
 </section>
