--- a/src/app/pages/events/scs/styles.adaptive.scss
+++ b/src/app/pages/events/scs/styles.adaptive.scss
@@ -1,4 +1,4 @@
-@media (max-width: 786px) {
+/* @media (max-width: 786px) {
   section {
     .content {
       .title {
@@ -25,3 +25,4 @@
     }
   }
 }
+ */
