--- a/src/app/admin/add-events/add-events.component.scss
+++ b/src/app/admin/add-events/add-events.component.scss
@@ -87,15 +87,22 @@ section {
   .add_event_block {
     width: 80vw;
 
-    .form_category {
+    .form_events {
       width: 100%;
       position: relative;
       display: flex;
       flex-direction: column;
       align-items: center;
+      justify-content: center;
+      .country_select,
+      .name,
+      .link,
+      .description {
+        width: 50%;
+      }
 
       .image {
-        width: 100%;
+        width: 50%;
         position: relative;
         display: flex;
         flex-direction: column;
@@ -115,7 +122,7 @@ section {
       }
 
       .button_block {
-        width: 100%;
+        width: 50%;
         display: flex;
         flex-direction: row;
         align-items: center;
