--- a/src/app/pages/events/events.component.html
+++ b/src/app/pages/events/events.component.html
@@ -1,6 +1,39 @@
 <section>
     <div class="title">
-        <h1>EVENTS</h1>
+        <div class="contru_name">
+            <h1>NEWS</h1>
+        </div>
+        <div class="line"></div>
     </div>
+
+    <div class="events_list">
+        <!--Фільтр по країнах]-->
+        <div class="filter">
+            <div class="search">
+                <select id="countrySelect" class="form-control" (change)="onCountrySelect($event)">
+                    <option value="" disabled selected>Choose a country</option>
+                    <option value="all">All</option>
+                    <option *ngFor="let country of countryArr" [value]="country.id">{{ country.name }}</option>
+                </select>
+            </div>
+        </div>
+
+        <ul class="list-group">
+            <li class="list-group-item d-flex justify-content-between align-items-center" *ngFor="let item of items">
+                <div class="image_link">
+                    <a [href]="item.link" target="_blank">
+                        <img [src]="item.imagen" alt="{{ item.namen }}" class="img-fluid" style="max-width: 150px;">
+                    </a>
+                </div>
+                <div class="title_description">
+                    <h5>{{ item.namen }}</h5>
+                    <p [innerHTML]="item.description"></p>
+                </div>
+            </li>
+        </ul>
+
+    </div>
+
+
+
 </section>
-<p>partners works!</p>
