--- a/src/app/pages/partners/partners.component.html
+++ b/src/app/pages/partners/partners.component.html
@@ -7,18 +7,51 @@
         <div class="line"></div>
     </div>
 
-    <ul class="list-group">
-        <li class="list-group-item d-flex justify-content-between align-items-center" *ngFor="let item of items">
-            <div>
-                <img [src]="item.imageUrl" alt="{{ item.title }}" class="img-fluid" style="max-width: 150px;">
 
-                <h5>{{ item.title }}</h5>
-                <p>{{ item.description }}</p>
+    <ul class="list-group">
+
+        <li class="list-group-item d-flex justify-content-between align-items-center" *ngFor="let item of items">
+            <div class="image_link">
+                <a [href]="item.link" target="_blank">
+                    <img [src]="item.image" alt="{{ item.name }}" class="img-fluid" style="max-width: 150px;">
+                </a>
+            </div>
+            <div class="title_description">
+                <h5>{{ item.name }}</h5>
+                <p [innerHTML]="item.description"></p>
             </div>
         </li>
     </ul>
 
 
+    <footer>
+        <div class="footer_links">
+            <ul>
+                <li class="nav-item">
+                    <a [routerLink]="['/about-project']" class="nav-link">About project</a>
+                </li>
+                <li class="nav-item">
+                    <a [routerLink]="['/partners']" class="nav-link">Partners</a>
+                </li>
+                <li class="nav-item">
+                    <a [routerLink]="['/events']" class="nav-link">Events</a>
+                </li>
 
-    <app-footer></app-footer>
+            </ul>
+            <div class="contact">
+                <a href="mailto:brakethefakes&#64;gmail.com">brakethefakes&#64;gmail.com</a>
+                <a class="facebook" href="https://www.facebook.com/caukraine" target="_blank" rel="noopener noreferrer">
+                    <img src="../../../assets/icon/facebook.png" alt="">
+                </a>
+                <a class="facebook" href="https://www.instagram.com/caukraine2022/" target="_blank"
+                    rel="noopener noreferrer">
+                    <img src="../../../assets/icon/instagram.png" alt="">
+                </a>
+            </div>
+        </div>
+        <div class="creat">
+            <p>© 2024 All Rights Reserved.</p>
+        </div>
+    </footer>
+
 </section>
