--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,17 +4,18 @@
 /* $input-border-color: #ff5252; */
 $input-focus-border-color: #ff5252;
 $input-focus-box-shadow: 0 0 0 0.25rem #ff5252;
-@import 'bootstrap/scss/bootstrap';
+@import "bootstrap/scss/bootstrap";
 
-@import './app/shared/styles/based.scss';
-
+@import "./app/shared/styles/based.scss";
 
 html,
 body {
-    height: 100%;
+  height: 100%;
+  margin: 0;
+  overflow-x: hidden;
 }
 
 body {
-    margin: 0;
-    font-family: Roboto, "Helvetica Neue", sans-serif;
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
