--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -14,7 +14,7 @@
             <a class="nav-link" [routerLink]="'partners'" routerLinkActive="active">Партнери</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" [routerLink]="'events'" routerLinkActive="active">Події</a>
+            <a class="nav-link" [routerLink]="'events'" routerLinkActive="active">Новини</a>
         </li>
     </ul>
 
