--- a/src/app/pages/country/country.component.html
+++ b/src/app/pages/country/country.component.html
@@ -66,7 +66,7 @@
                     <a [routerLink]="['/partners']" class="nav-link">Partners</a>
                 </li>
                 <li class="nav-item">
-                    <a [routerLink]="['/events']" class="nav-link">Events</a>
+                    <a [routerLink]="['/events']" class="nav-link">News</a>
                 </li>
 
             </ul>
