--- a/src/app/pages/events/scs/styles.desktop.scss
+++ b/src/app/pages/events/scs/styles.desktop.scss
@@ -69,8 +69,11 @@ section {
           width: 70%;
 
           p {
-            float: left;
             text-align: justify;
+            img {
+              float: left;
+              margin: 10px;
+            }
           }
         }
       }
