--- a/src/app/shared/styles/based.scss
+++ b/src/app/shared/styles/based.scss
@@ -19,7 +19,7 @@ h1 {
 }
 a,
 p {
-  font-family: "Oswald", sans-serif;
+  font-family: "Lexend", sans-serif;
   font-style: normal;
 }
 
@@ -89,7 +89,6 @@ footer {
   }
   a,
   p {
-    font-family: "Oswald", sans-serif;
     font-style: normal;
     font-size: 12px;
   }
