--- a/src/app/admin/add-events/add-events.component.scss
+++ b/src/app/admin/add-events/add-events.component.scss
@@ -25,7 +25,7 @@ section {
   }
 
   .table_block {
-    width: 100%;
+    width: 80%;
 
     &.active {
       display: none;
@@ -45,6 +45,20 @@ section {
 
       tbody {
         tr {
+          td {
+            .description {
+              height: 100px;
+              display: -webkit-box;
+              -webkit-line-clamp: 4; /* Кількість видимих рядків */
+              -webkit-box-orient: vertical;
+              overflow: hidden;
+              text-overflow: ellipsis;
+            }
+          }
+          .name {
+            width: 30%;
+          }
+
           .image {
             width: 80px;
             height: 70px;
