--- a/src/app/pages/events/scs/styles.desktop.scss
+++ b/src/app/pages/events/scs/styles.desktop.scss
@@ -47,33 +47,80 @@ section {
     margin-top: 10px;
     margin-bottom: 10vh;
     .filter {
-      width: 30%;
+      width: 100%;
+      display: flex;
+      justify-content: right;
+      .search {
+        width: 40%;
+        select .country {
+          &:hover {
+            background-color: var(--clr-2) !important;
+          }
+        }
+      }
     }
     .list-group {
       width: 100%;
       height: auto;
       display: flex;
       list-style: none;
+      margin-top: 10px;
       margin-bottom: 10vh;
       li {
+        width: 100%;
+        height: 200px;
+        position: relative;
         border: none;
         border-bottom: 0.3px solid var(--clr-3);
 
         .image_link {
           width: 30%;
+          height: 100%;
           display: flex;
           align-items: center;
           justify-content: center;
+          position: relative;
+          cursor: pointer;
+
+          a {
+            width: 100%;
+            height: 100%;
+
+            .img_black {
+              width: 100%;
+              height: 100%;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              position: relative;
+              overflow: hidden;
+              cursor: pointer;
+
+              img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                transition: 0.8s;
+              }
+            }
+          }
         }
+
         .title_description {
           width: 70%;
+          height: 100%;
+          position: relative;
+          display: flex;
+          flex-direction: column;
+          align-items: flex-start;
+          justify-content: center;
+          padding-left: 15px;
 
-          p {
-            text-align: justify;
-            img {
-              float: left;
-              margin: 10px;
-            }
+          .btn {
+            width: 100px;
+            position: absolute;
+            right: 0;
+            bottom: 0;
           }
         }
       }
