--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -16,7 +16,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a [routerLink]="['/about-project']" class="nav-link">About project</a>
+                        <a [routerLink]="['/about-project']" class="nav-link">About</a>
                     </li>
                     <li class="nav-item">
                         <a [routerLink]="['/partners']" class="nav-link">Partners</a>
