--- a/src/app/pages/partners/partners.component.html
+++ b/src/app/pages/partners/partners.component.html
@@ -28,7 +28,7 @@
         <div class="footer_links">
             <ul>
                 <li class="nav-item">
-                    <a [routerLink]="['/about-project']" class="nav-link">About project</a>
+                    <a [routerLink]="['/about-project']" class="nav-link">About</a>
                 </li>
                 <li class="nav-item">
                     <a [routerLink]="['/partners']" class="nav-link">Partners</a>
