--- a/src/app/pages/country/scs/styles.desktop.scss
+++ b/src/app/pages/country/scs/styles.desktop.scss
@@ -125,8 +125,18 @@ section {
           max-height: 100%;
 
           .information {
+            width: 100%;
             padding: 0 10px;
             position: relative;
+            .pettion_btn {
+              display: block;
+              width: 100%;
+              padding: 10px 0;
+              background-color: var(--clr-2);
+              color: var(--clr-w);
+              text-align: center;
+              border-radius: 5px;
+            }
           }
         }
       }
