--- a/src/app/pages/events/events.component.html
+++ b/src/app/pages/events/events.component.html
@@ -39,6 +39,34 @@
 
     </div>
 
+    <footer>
+        <div class="footer_links">
+            <ul>
+                <li class="nav-item">
+                    <a [routerLink]="['/about-project']" class="nav-link">About</a>
+                </li>
+                <li class="nav-item">
+                    <a [routerLink]="['/partners']" class="nav-link">Partners</a>
+                </li>
+                <li class="nav-item">
+                    <a [routerLink]="['/events']" class="nav-link">News</a>
+                </li>
 
+            </ul>
+            <div class="contact">
+                <a href="mailto:brakethefakes&#64;gmail.com">brakethefakes&#64;gmail.com</a>
+                <a class="facebook" href="https://www.facebook.com/caukraine" target="_blank" rel="noopener noreferrer">
+                    <img src="../../../assets/icon/facebook.png" alt="">
+                </a>
+                <a class="facebook" href="https://www.instagram.com/caukraine2022/" target="_blank"
+                    rel="noopener noreferrer">
+                    <img src="../../../assets/icon/instagram.png" alt="">
+                </a>
+            </div>
+        </div>
+        <div class="creat">
+            <p>© 2024 All Rights Reserved.</p>
+        </div>
+    </footer>
 
 </section>
