--- a/src/app/pages/country/scs/styles.desktop.scss
+++ b/src/app/pages/country/scs/styles.desktop.scss
@@ -136,6 +136,7 @@ section {
               color: var(--clr-w);
               text-align: center;
               border-radius: 5px;
+              text-decoration: none;
             }
           }
         }
