--- a/src/app/pages/events/events.component.html
+++ b/src/app/pages/events/events.component.html
@@ -30,9 +30,10 @@
                 </div>
                 <div class="title_description">
                     <h4>{{ item.namen }}</h4>
-
+                </div>
+                <div class="more_btn">
                     <button type="button" class="btn btn-outline-secondary" [routerLink]="['/news-page']"
-                        [queryParams]="{ newsID: item.id }">More >>></button>
+                        [queryParams]="{ newsID: item.id }">More </button>
                 </div>
             </li>
         </ul>
