--- a/src/app/pages/events/scs/styles.adaptive.scss
+++ b/src/app/pages/events/scs/styles.adaptive.scss
@@ -1,28 +1,21 @@
-/* @media (max-width: 786px) {
+@media (max-width: 786px) {
   section {
-    .content {
-      .title {
-        width: 90%;
-      }
+    .events_list {
+      .list-group {
+        li {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
 
-      .description {
-        width: 90%;
-        .img-fluid {
-          width: 100%;
-          height: 100%;
+          .image_link {
+            width: 100%;
+          }
+
+          .title_description {
+            width: 100%;
+          }
         }
       }
     }
   }
 }
-
-@media (max-width: 580px) {
-  section {
-    .description {
-      .img-fluid {
-        width: auto;
-      }
-    }
-  }
-}
- */
