--- a/src/app/pages/events/scs/styles.desktop.scss
+++ b/src/app/pages/events/scs/styles.desktop.scss
@@ -68,14 +68,15 @@ section {
       margin-bottom: 10vh;
       li {
         width: 100%;
-        height: 200px;
+        height: auto;
         position: relative;
         border: none;
         border-bottom: 0.3px solid var(--clr-3);
+        margin-bottom: 15px;
 
         .image_link {
           width: 30%;
-          height: 100%;
+          height: auto;
           display: flex;
           align-items: center;
           justify-content: center;
@@ -108,19 +109,21 @@ section {
 
         .title_description {
           width: 70%;
-          height: 100%;
+          height: auto;
           position: relative;
           display: flex;
           flex-direction: column;
           align-items: flex-start;
           justify-content: center;
           padding-left: 15px;
-
+        }
+        .more_btn {
+          width: 100%;
+          position: relative;
+          display: flex;
+          justify-content: flex-end;
           .btn {
             width: 100px;
-            position: absolute;
-            right: 0;
-            bottom: 0;
           }
         }
       }
