--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,7 @@ $input-focus-box-shadow: 0 0 0 0.25rem #ff5252;
 @import "bootstrap/scss/bootstrap";
 
 @import "./app/shared/styles/based.scss";
+@import "./app/modal/image-open/image-open.component.scss";
 
 html,
 body {
