--- a/src/app/admin/add-partner/add-partner.component.scss
+++ b/src/app/admin/add-partner/add-partner.component.scss
@@ -72,6 +72,13 @@ section {
       display: flex;
       flex-direction: column;
       align-items: center;
+      .init_block {
+        width: 100%;
+        float: left;
+        .input {
+          width: 50%;
+        }
+      }
 
       .image_organization {
         width: 100%;
